--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@srexi/purecounterjs": "^1.5.0",
     "aos": "^2.3.4",
+    "emailjs-com": "^3.2.0",
     "firebase": "^11.3.1",
     "glightbox": "^3.3.1",
     "react": "^18.0.0",
